<resources>
    <string name="app_name">view_manager</string>
    <string name="hint_new_nip">Confirma tu NIP</string>
    <string name="default_label_head_account">Enviar a</string>
    <string name="btn_all">Ver Todos</string>
    <string name="url_images_logos">https://www.yaganaste.com/Logos/</string>
    <string name="add_fav">Agregar\nfavorito</string>
    <string name="title_indication_simple">¡Tu Activación Esta en Proceso!</string>
    <string name="subtitle_indication_simple">La activación tomará menos de 15 minutos.\n\nUna vez que este lista podrás realizar cobros\ncon tarjeta en tu negocio fácil y rápido</string>
    <string name="date">26</string>
    <string name="month">Ene</string>
    <string name="movement">Venta con tarjet</string>
    <string name="ref">Santander 5245</string>
    <string name="movements_res">Movimientos Recientes</string>
    <string name="empty_movs">Sin movimientos</string>
</resources>
