<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/date"
        android:textColor="@color/colorYaGanaste"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textColor="@color/gray_slate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_day" />

    <TextView
        android:id="@+id/text_movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/movement"
        android:textColor="@color/colorYaGanaste"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_day"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/ref"
        android:textColor="@color/gray_slate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_day"
        app:layout_constraintTop_toBottomOf="@+id/text_movement" />

    <com.pagatodo.view_manager.components.CurrencyFormat
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_state"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_dove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>